tests/paczka1/small_fuzzy/65752291.err
Error in line 2: qZtN2OOc S0 43,1
Error in line 3: hQEogF S763 57,1
Error in line 6: SHMBY6fw35 A71 40,5
Error in line 14: SHMBY6fw35 S0 82,9
